@@ -7,14 +7,14 @@
 	<key>IDESourceControlProjectIdentifier</key>
 	<string>AC64BBA1-1BC0-499E-AB8D-FA1BCA2E0E28</string>
 	<key>IDESourceControlProjectName</key>
-	<string>Platypus</string>
+	<string>project</string>
 	<key>IDESourceControlProjectOriginsDictionary</key>
 	<dict>
 		<key>DFF60879964B6407261D876EC5EE798A07462776</key>
 		<string>https://github.com/sveinbjornt/Platypus.git</string>
 	</dict>
 	<key>IDESourceControlProjectPath</key>
-	<string>Platypus.xcodeproj</string>
+	<string>Platypus.xcodeproj/project.xcworkspace</string>
 	<key>IDESourceControlProjectRelativeInstallPathDictionary</key>
 	<dict>
 		<key>DFF60879964B6407261D876EC5EE798A07462776</key>
